# Purview_Workbench

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  setup.cmd  setup.ps1  setup.sh  start-local.sh  tsconfig.base.json  turbo.json
apps/api/: README.md  alembic.ini  purview_workbench.db  pyproject.toml  tests_placeholder.md
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20261001_0001_phase1_tenancy.py  20261001_0002_pattern_library.py  README.md
apps/api/src/: main.py
apps/api/src/auth/: token_validation.py
apps/api/src/config/: settings.py
apps/api/src/db/: session.py
apps/api/src/models/: __init__.py  pattern_template.py  tenant.py  tenant_membership.py  user.py
apps/api/src/purview_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/routes/: auth_tenant.py  health.py  jobs.py  patterns.py  public.py
apps/api/src/schemas/: auth.py  patterns.py  tenant.py
apps/api/src/services/: job_service.py  pattern_service.py
apps/api/tests/: test_pattern_routes.py  test_phase1_auth_tenant_routes.py
apps/web/: README.md  index.html  package.json
apps/web/src/: App.test.tsx  App.tsx  styles.css  types.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/: main.py
docs/: setup.md
infra/terraform/: main.tf
spec/build-pack/v0.1/: build-pack-v0.1.md  phase-0.md  phase-1.md  phase-2.md
spec/design-pack/v0.1/: README.md  design-system.md  information-architecture.md  (+7 more)
tests/api/: test_health_placeholder.py
tests/e2e/: README.md
tests/worker/: README.md
(+31 files in other folders)
