[project]
name = "purview-api"
version = "0.1.0"
description = "Phase 1 FastAPI API scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "pydantic>=2.9.2",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.3"
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
